# mercadona-scraper

./: .gitignore  README.md  cli.py  config.py  conftest.py  http_client.py  main.py  pyproject.toml  requirements.txt
mercadona_scraper/: __init__.py  cli.py  config.py  exceptions.py  formatters.py  http_client.py  logging_config.py  models.py  scraper.py  warehouse.py
mercadona_scraper/api/: main.py  routes.py
mercadona_scraper/strategies/: algolia.py  api.py  base.py  playwright.py
tests/: test_api.py  test_cli.py  test_exceptions.py  test_formatters.py  test_http_client.py  test_models.py  test_scraper.py  test_strategies_algolia.py  test_strategies_api.py  test_strategies_playwright.py  test_warehouse.py
