[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mercadona-scraper"
version = "0.1.0"
description = "Scraper de productos Mercadona (tienda.mercadona.es)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "playwright>=1.61.0",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "responses>=0.26.2",
]

[tool.setuptools.packages.find]
include = ["mercadona_scraper*"]
